--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -87,156 +87,154 @@ jobs:
       - name: Run tests
         run: bun run test:unit
 
-  # Temporarily disabled until Cloudflare fixes queue deployment issues
-  # deploy:
-  #   name: "Preview Deployment"
-  #   needs: [security-check, lint, format, typecheck, test]
-  #   if: ${{ github.event.action != 'closed' && needs.security-check.outputs.is-fork == 'false' }}
-  #   runs-on: ubuntu-latest
-  #   environment: dev
-  #   permissions:
-  #     contents: read
-  #     pull-requests: write
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: oven-sh/setup-bun@v2
+  deploy:
+    name: "Preview Deployment"
+    needs: [security-check, lint, format, typecheck, test]
+    if: ${{ github.event.action != 'closed' && needs.security-check.outputs.is-fork == 'false' }}
+    runs-on: ubuntu-latest
+    environment: dev
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
 
-  #     - name: "Install dependencies"
-  #       run: bun install
+      - name: "Install dependencies"
+        run: bun install
 
-  #     - name: "Deploy backend"
-  #       id: backend
-  #       run: |
-  #         # Capture deployment output
-  #         set +e  # Don't exit on error yet, we want to see the output
-  #         OUTPUT=$(bun run infra:deploy --filter=backend 2>&1)
-  #         EXIT_CODE=$?
-  #         set -e
+      - name: "Deploy backend"
+        id: backend
+        run: |
+          # Capture deployment output
+          set +e  # Don't exit on error yet, we want to see the output
+          OUTPUT=$(bun run infra:deploy --filter=backend 2>&1)
+          EXIT_CODE=$?
+          set -e
 
-  #         echo "$OUTPUT"
+          echo "$OUTPUT"
 
-  #         if [ $EXIT_CODE -ne 0 ]; then
-  #           echo "Error: Deployment failed with exit code $EXIT_CODE"
-  #           exit $EXIT_CODE
-  #         fi
+          if [ $EXIT_CODE -ne 0 ]; then
+            echo "Error: Deployment failed with exit code $EXIT_CODE"
+            exit $EXIT_CODE
+          fi
 
-  #         # Extract API URL from output (handles both "API URL: ..." and object format)
-  #         API_URL=$(echo "$OUTPUT" | grep -oP "(API URL:\s*|url:\s*['\"])https://[^'\"[:space:]]*" | head -1 | grep -oP "https://[^'\"[:space:]]*")
+          # Extract API URL from output (alchemy.run.ts logs "API_URL=<url>" for non-dev stages)
+          API_URL=$(echo "$OUTPUT" | grep "^API_URL=" | cut -d'=' -f2)
 
-  #         if [ -z "$API_URL" ]; then
-  #           echo "Error: Failed to extract API URL from deployment output"
-  #           exit 1
-  #         fi
+          if [ -z "$API_URL" ]; then
+            echo "Error: Failed to extract API URL from deployment output"
+            exit 1
+          fi
 
-  #         echo "api_url=$API_URL" >> $GITHUB_OUTPUT
-  #       env:
-  #         STAGE: ${{ env.STAGE }}
-  #         ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
-  #         ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
-  #         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-  #         CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-  #         CDP_API_KEY_ID: ${{ secrets.CDP_API_KEY_ID }}
-  #         CDP_API_KEY_SECRET: ${{ secrets.CDP_API_KEY_SECRET }}
-  #         CDP_WALLET_SECRET: ${{ secrets.CDP_WALLET_SECRET }}
-  #         CDP_CLIENT_API_KEY: ${{ secrets.CDP_CLIENT_API_KEY }}
-  #         PULL_REQUEST: ${{ github.event.number }}
-  #         GITHUB_SHA: ${{ github.sha }}
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          echo "api_url=$API_URL" >> $GITHUB_OUTPUT
+        env:
+          STAGE: ${{ env.STAGE }}
+          ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
+          ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CDP_API_KEY_ID: ${{ secrets.CDP_API_KEY_ID }}
+          CDP_API_KEY_SECRET: ${{ secrets.CDP_API_KEY_SECRET }}
+          CDP_WALLET_SECRET: ${{ secrets.CDP_WALLET_SECRET }}
+          CDP_CLIENT_API_KEY: ${{ secrets.CDP_CLIENT_API_KEY }}
+          PULL_REQUEST: ${{ github.event.number }}
+          GITHUB_SHA: ${{ github.sha }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  #     - name: "Create account and register webhook on the backend"
-  #       id: couch
-  #       run: |
-  #         # Create account and get API key
-  #         ACCOUNT_RESPONSE=$(curl -X PUT ${{ steps.backend.outputs.api_url }}/api/account \
-  #           -H "Content-Type: application/json" \
-  #           -d '{"address":"${{ secrets.MERCHANT_ADDRESS }}"}' \
-  #           -s -w "\n%{http_code}")
+      - name: "Create account and register webhook on the backend"
+        id: couch
+        run: |
+          # Create account and get API key
+          ACCOUNT_RESPONSE=$(curl -X PUT ${{ steps.backend.outputs.api_url }}/api/account \
+            -H "Content-Type: application/json" \
+            -d '{"address":"${{ secrets.MERCHANT_ADDRESS }}"}' \
+            -s -w "\n%{http_code}")
 
-  #         ACCOUNT_HTTP_CODE=$(echo "$ACCOUNT_RESPONSE" | tail -n1)
-  #         ACCOUNT_BODY=$(echo "$ACCOUNT_RESPONSE" | sed '$d')
+          ACCOUNT_HTTP_CODE=$(echo "$ACCOUNT_RESPONSE" | tail -n1)
+          ACCOUNT_BODY=$(echo "$ACCOUNT_RESPONSE" | sed '$d')
 
-  #         if [ "$ACCOUNT_HTTP_CODE" != "200" ] && [ "$ACCOUNT_HTTP_CODE" != "201" ]; then
-  #           echo "Error: Account creation failed with HTTP $ACCOUNT_HTTP_CODE"
-  #           echo "$ACCOUNT_BODY"
-  #           exit 1
-  #         fi
+          if [ "$ACCOUNT_HTTP_CODE" != "200" ] && [ "$ACCOUNT_HTTP_CODE" != "201" ]; then
+            echo "Error: Account creation failed with HTTP $ACCOUNT_HTTP_CODE"
+            echo "$ACCOUNT_BODY"
+            exit 1
+          fi
 
-  #         API_KEY=$(echo "$ACCOUNT_BODY" | jq -r '.api_key')
+          API_KEY=$(echo "$ACCOUNT_BODY" | jq -r '.api_key')
 
-  #         if [ -z "$API_KEY" ] || [ "$API_KEY" = "null" ]; then
-  #           echo "Error: Failed to extract API key from response"
-  #           echo "$ACCOUNT_BODY"
-  #           exit 1
-  #         fi
+          if [ -z "$API_KEY" ] || [ "$API_KEY" = "null" ]; then
+            echo "Error: Failed to extract API key from response"
+            echo "$ACCOUNT_BODY"
+            exit 1
+          fi
 
-  #         # Construct playground URL from backend URL
-  #         # Backend: couch-backend-pr-5-api.workers.dev
-  #         # Playground: couch-playground-pr-5-website.workers.dev
-  #         BACKEND_URL="${{ steps.backend.outputs.api_url }}"
-  #         PLAYGROUND_URL="${BACKEND_URL/couch-backend/couch-playground}"
-  #         PLAYGROUND_URL="${PLAYGROUND_URL/-api/-website}"
+          # Construct playground URL from backend URL
+          # Backend: couch-backend-pr-5-api.workers.dev
+          # Playground: couch-playground-pr-5-website.workers.dev
+          BACKEND_URL="${{ steps.backend.outputs.api_url }}"
+          PLAYGROUND_URL="${BACKEND_URL/couch-backend/couch-playground}"
+          PLAYGROUND_URL="${PLAYGROUND_URL/-api/-website}"
 
-  #         # Create webhook with the playground URL
-  #         WEBHOOK_RESPONSE=$(curl -X PUT ${{ steps.backend.outputs.api_url }}/api/webhook \
-  #           -H "Content-Type: application/json" \
-  #           -H "Authorization: Bearer $API_KEY" \
-  #           -d "{\"url\":\"$PLAYGROUND_URL/api/webhook\"}" \
-  #           -s -w "\n%{http_code}")
+          # Create webhook with the playground URL
+          WEBHOOK_RESPONSE=$(curl -X PUT ${{ steps.backend.outputs.api_url }}/api/webhook \
+            -H "Content-Type: application/json" \
+            -H "Authorization: Bearer $API_KEY" \
+            -d "{\"url\":\"$PLAYGROUND_URL/api/webhook\"}" \
+            -s -w "\n%{http_code}")
 
-  #         WEBHOOK_HTTP_CODE=$(echo "$WEBHOOK_RESPONSE" | tail -n1)
-  #         WEBHOOK_BODY=$(echo "$WEBHOOK_RESPONSE" | sed '$d')
+          WEBHOOK_HTTP_CODE=$(echo "$WEBHOOK_RESPONSE" | tail -n1)
+          WEBHOOK_BODY=$(echo "$WEBHOOK_RESPONSE" | sed '$d')
 
-  #         if [ "$WEBHOOK_HTTP_CODE" != "200" ] && [ "$WEBHOOK_HTTP_CODE" != "201" ]; then
-  #           echo "Error: Webhook creation failed with HTTP $WEBHOOK_HTTP_CODE"
-  #           echo "$WEBHOOK_BODY"
-  #           exit 1
-  #         fi
+          if [ "$WEBHOOK_HTTP_CODE" != "200" ] && [ "$WEBHOOK_HTTP_CODE" != "201" ]; then
+            echo "Error: Webhook creation failed with HTTP $WEBHOOK_HTTP_CODE"
+            echo "$WEBHOOK_BODY"
+            exit 1
+          fi
 
-  #         WEBHOOK_SECRET=$(echo "$WEBHOOK_BODY" | jq -r '.secret')
+          WEBHOOK_SECRET=$(echo "$WEBHOOK_BODY" | jq -r '.secret')
 
-  #         if [ -z "$WEBHOOK_SECRET" ] || [ "$WEBHOOK_SECRET" = "null" ]; then
-  #           echo "Error: Failed to extract webhook secret from response"
-  #           echo "$WEBHOOK_BODY"
-  #           exit 1
-  #         fi
+          if [ -z "$WEBHOOK_SECRET" ] || [ "$WEBHOOK_SECRET" = "null" ]; then
+            echo "Error: Failed to extract webhook secret from response"
+            echo "$WEBHOOK_BODY"
+            exit 1
+          fi
 
-  #         echo "api_key=$API_KEY" >> $GITHUB_OUTPUT
-  #         echo "webhook_secret=$WEBHOOK_SECRET" >> $GITHUB_OUTPUT
+          echo "api_key=$API_KEY" >> $GITHUB_OUTPUT
+          echo "webhook_secret=$WEBHOOK_SECRET" >> $GITHUB_OUTPUT
 
-  #     - name: "Deploy playground"
-  #       run: bun run infra:deploy --filter=playground
-  #       env:
-  #         STAGE: ${{ env.STAGE }}
-  #         ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
-  #         ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
-  #         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-  #         CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-  #         COUCH_WEBHOOK_SECRET: ${{ steps.couch.outputs.webhook_secret }}
-  #         COUCH_API_KEY: ${{ steps.couch.outputs.api_key }}
-  #         PULL_REQUEST: ${{ github.event.number }}
-  #         GITHUB_SHA: ${{ github.sha }}
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: "Deploy playground"
+        run: bun run infra:deploy --filter=playground
+        env:
+          STAGE: ${{ env.STAGE }}
+          ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
+          ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          COUCH_WEBHOOK_SECRET: ${{ steps.couch.outputs.webhook_secret }}
+          COUCH_API_KEY: ${{ steps.couch.outputs.api_key }}
+          PULL_REQUEST: ${{ github.event.number }}
+          GITHUB_SHA: ${{ github.sha }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  # Temporarily disabled until Cloudflare fixes queue deployment issues
-  # cleanup:
-  #   name: "Cleanup preview"
-  #   runs-on: ubuntu-latest
-  #   if: ${{ github.event.action == 'closed' }}
-  #   environment: dev
-  #   permissions:
-  #     contents: read
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: oven-sh/setup-bun@v2
+  cleanup:
+    name: "Cleanup preview"
+    runs-on: ubuntu-latest
+    if: ${{ github.event.action == 'closed' }}
+    environment: dev
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
 
-  #     - name: Install dependencies
-  #       run: bun install
+      - name: Install dependencies
+        run: bun install
 
-  #     - name: Destroy preview
-  #       run: bun run infra:destroy
-  #       env:
-  #         STAGE: ${{ env.STAGE }}
-  #         ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
-  #         ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
-  #         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-  #         CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+      - name: Destroy preview
+        run: bun run infra:destroy
+        env:
+          STAGE: ${{ env.STAGE }}
+          ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
+          ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
